# vk_maria

./: .gitignore  .readthedocs.yml  README.md  README.rst  dev_requirements.txt  pyproject.toml  setup.py
.github/: FUNDING.yml
docs/source/: conf.py  event_handlers.rst  event_handling.rst  fsm.rst  index.rst  installation.rst  keyboards.rst  modules.rst  quickstart.rst  upload.rst
docs/source/_templates/: custom-module-template.rst
examples/: custom_filters.py  echo_bot.py  finite_state_machine.py  longpoll_v1.py  longpoll_v2.py  longpolling.py  longpolling_with_dispatcher.py  regexp.py  simple_keyboard.py  upload_photo.py
examples/keyboard_associator/: example.py
examples/keyboard_associator/json_keyboards/: keyboard1.json  keyboard2.json
tests/: test_api_method.py
vk_maria/: __init__.py  api.py  exceptions.py  longpoll.py  mixins.py  responses.py  types.py  utils.py  vk_types.py
vk_maria/dispatcher/: dispatcher.py
vk_maria/dispatcher/filters/: filters.py  handler.py
vk_maria/dispatcher/fsm/: __init__.py  state.py
vk_maria/dispatcher/fsm/storage/: core.py
vk_maria/dispatcher/fsm/storage/file/: base.py
vk_maria/dispatcher/fsm/storage/memory/: __init__.py  memory.py
vk_maria/keyboard/: __init__.py  associator.py  exceptions.py  keyboard.py  model.py  utils.py
vk_maria/longpoll/: __init__.py  longpoll.py  mixins.py  state.py  storage.py  types.py
vk_maria/longpoll/filters/: filters.py  handler.py
vk_maria/longpoll/fsm/: __init__.py  state.py  storage.py  types.py
vk_maria/longpoll/fsm/storage/: __init__.py  core.py
vk_maria/longpoll/fsm/storage/file/: __init__.py  json.py  pickle.py
vk_maria/longpoll/fsm/storage/memory/: memory.py
vk_maria/types/: __init__.py  callback_query_event.py  chat.py  event.py  event_type.py  input_file.py  keyboard.py  message.py  message_event.py  state.py
vk_maria/upload/: __init__.py  exceptions.py  upload.py  utils.py
