[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vk-maria"
version = "3.0.8"
description = "Simple Vk Bot synchronous framework"
authors = ["lxstvayne"]
license = "GPL-3.0"
readme = "README.rst"

keywords = [
    "vk",
    "bot",
    "api",
    "framework",
    "wrapper",
    "sync"
]
classifiers = [
    'Environment :: Console',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.20.1"
loguru = ">=0.5.3"
pydotdict = ">=3.3.11"

[tool.poetry.group.docs.dependencies]
furo = "*"
sphinx_autodoc_typehints = "*"


[tool.poetry.urls]
Documentation = "https://vk-maria.readthedocs.io/ru/latest/"
Repository = "https://github.com/lxstvayne/vk_maria"
